2004-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Make the
	advice less fragile.  Surround temporary redefinition of
	`substitute-in-file-name' with `unwind-protect'.  Suggested by
	Matt Hodges <MPHodges@member.fsf.org>.

2004-10-15  John Paul Wallington  <jpw@gnu.org>

	* tramp.el (top): Set `edebug-form-spec' property directly rather
	than calling `def-edebug-spec'.

2004-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Don't activate
	advice during definition.  This is done later on, depending on
	test result of `substitute-in-file-name'.  Suggested by Stefan
	Monnier <monnier@iro.umontreal.ca>.

2004-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Apply `def-edebug-spec' only if function is
	defined.  This is not the case for XEmacs without package
	"edebug".
	(tramp-set-auto-save-file-modes): Set permissions of autosaved
	remote files to the permissions of the original file.  This is not
	the case for Emacs < 21.3.50 and XEmacs < 21.5.  Add function to
	`auto-save-hook'.  Reported by Thomas Prokosch <thomas@nadev.net>.

2004-10-10  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp.el (tramp-coding-commands): New entry, uses built-in uu
	encoding provided by Perl.  Contributed by Slaven Rezic.  (2
	lines.)

2004-09-19  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.2 released.

	* tramp.el (tramp-handle-substitute-in-file-name): Implementation
	reworked.  It handles now both "//" and "/~" for URL syntax.
	(top): Undefine also "~" in `read-file-name-map' when syntax is
	'url.  Needed for XEmacs.

	* tramp-efs.el, tramp-ftp.el (top): Add
	`tramp-handle-substitute-in-file-name' to respective file name
	handler.  Doesn't seem to work for EFS yet.

2004-09-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-decode): Fixed an error in Perl
	implementation.  $pending must be cleared every loop.  Reported by